v2.0.x-SNAPSHOT/connectors/messaging/kinesis.mdx
---
title: Kinesis Connector | OpenMetadata Streaming Integration
description: Connect Amazon Kinesis to OpenMetadata with our comprehensive connector guide. Set up real-time streaming data ingestion and metadata extraction easily.
sidebarTitle: Overview
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import MetadataAgentMessaging from '/snippets/connectors/metadata-agent/messaging.mdx'
import Related from '/snippets/v2.0.x-SNAPSHOT/connectors/database/related.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/kinesis.webp'
name="Kinesis"
stage="PROD"
availableFeatures={["Topics", "Sample Data"]}
unavailableFeatures={[]} />
In this section, we provide guides and references to use the Kinesis connector.
Configure and schedule Kinesis metadata workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Troubleshooting](/v2.0.x-SNAPSHOT/connectors/messaging/kinesis/troubleshooting)

## Requirements

The Kinesis connector ingests metadata using the Kinesis boto3 client.
OpenMetadata retrieves information about streams and sample data from the streams in the AWS account.
The user must have the following policy set to access the metadata from Kinesis.

```json
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Sid": "KinesisPolicy",
            "Effect": "Allow",
            "Action": [
                "kinesis:ListStreams",
                "kinesis:DescribeStreamSummary",
                "kinesis:ListShards",
                "kinesis:GetShardIterator",
                "kinesis:GetRecords"
            ],
            "Resource": "*"
        }
    ]
}
```

For more information on Kinesis permissions visit the [AWS Kinesis official documentation](https://docs.aws.amazon.com/streams/latest/dev/controlling-access.html).

## Metadata Ingestion

To ingest metadata from Kinesis, you need to create a service connection. The service connects Kinesis with OpenMetadata. Once you create a service, OpenMetadata automatically starts ingesting metadata.

### Step 1: Add New Service

1. Navigate to **Settings** > **Services**.

   <img src="/public/images/connector2.0/metadata-ingestion/access-services.png" alt="Navigate to Settings and Services" />

2. Click **Add New Service**.

   <img src="/public/images/connector2.0/metadata-ingestion/add-new-service.png" alt="Add New Service" />

### Step 2: Select a Service and Connector

From the service type dropdown, select **Messaging Services**, then click the **Kinesis** connector tile.

![Select Service](/public/images/connector2.0/metadata-ingestion/Messaging/select-service/kinesis.png)

### Step 3: Add Service Name and Description

- Enter a unique, descriptive **Service Name**. OpenMetadata identifies services by their service name. Enter a name that distinguishes this deployment from other Kinesis services you are ingesting metadata from.
- Optional: Enter a **Description** for the service.

![Configure Service](/public/images/connector2.0/metadata-ingestion/Messaging/service-name/kinesis.png)

<Note>
**Note**: The service name cannot be changed after it is set.
</Note>

### Step 4: Configure Connection Options

Specify your source credentials and verify the connection.

#### Enter Connection Details

Enter the connection details for Kinesis. The right-hand panel in the UI displays inline help for each field.

![Configure Service Connection](/public/images/connector2.0/metadata-ingestion/Messaging/connection-details/kinesis.png)

- **AWS Access Key ID and AWS Secret Access Key**: When you interact with AWS, you specify your AWS security credentials to verify who you are and whether you have
  permission to access the resources that you are requesting. AWS uses the security credentials to authenticate and
  authorize your requests ([docs](https://docs.aws.amazon.com/IAM/latest/UserGuide/security-creds.html)).
Access keys consist of two parts: An **access key ID** (for example, `AKIAIOSFODNN7EXAMPLE`), and a **secret access key** (for example, `wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY`).
You must use both the access key ID and secret access key together to authenticate your requests.
You can find further information on [how to manage your access keys](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html).
- **AWS Region**: Each AWS Region is a separate geographic area in which AWS clusters data centers ([docs](https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.RegionsAndAvailabilityZones.html)).
As AWS can have instances in multiple regions, we need to know the region the service you want to reach belongs to.
Note that the AWS Region is the only required parameter when configuring a connection. When connecting to the
services programmatically, there are different ways in which we can extract and use the rest of AWS configurations.
You can find further information about [configuring your credentials](https://boto3.amazonaws.com/v1/documentation/api/latest/guide/credentials.html#configuring-credentials).
- **AWS Session Token (optional)**: If you are using temporary credentials to access your services, you will need to inform the AWS Access Key ID
  and AWS Secrets Access Key. Also, these will include an AWS Session Token.
You can find more information on [Using temporary credentials with AWS resources](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_temp_use-resources.html).
- **Endpoint URL (optional)**: To connect programmatically to an AWS service, you use an endpoint. An *endpoint* is the URL of the
  entry point for an AWS web service. The AWS SDKs and the AWS Command Line Interface (AWS CLI) automatically use the
  default endpoint for each service in an AWS Region. But you can specify an alternate endpoint for your API requests.
Find more information on [AWS service endpoints](https://docs.aws.amazon.com/general/latest/gr/rande.html).
- **Profile Name**: A named profile is a collection of settings and credentials that you can apply to an AWS CLI command.
  When you specify a profile to run a command, the settings and credentials are used to run that command.
  Multiple named profiles can be stored in the config and credentials files.
You can inform this field if you'd like to use a profile other than `default`.
Find more information about [Named profiles for the AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-profiles.html).
- **Assume Role Arn**: Typically, you use `AssumeRole` within your account or for cross-account access. In this field you'll set the
  `ARN` (Amazon Resource Name) of the policy of the other account.
A user who wants to access a role in a different account must also have permissions that are delegated from the account
administrator. The administrator must attach a policy that allows the user to call `AssumeRole` for the `ARN` of the role in the other account.
This is a required field if you'd like to `AssumeRole`.
Find more information on [AssumeRole](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html).

<Tip>
When using Assume Role authentication, ensure you provide the following details:
- **AWS Region**: Specify the AWS region for your deployment.
- **Assume Role ARN**: Provide the ARN of the role in your AWS account that OpenMetadata will assume.
</Tip>

- **Assume Role Session Name**: An identifier for the assumed role session. Use the role session name to uniquely identify a session when the same role
  is assumed by different principals or for different reasons.
By default, we'll use the name `OpenMetadataSession`.
Find more information about the [Role Session Name](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html#:~:text=An%20identifier%20for%20the%20assumed%20role%20session.).
- **Assume Role Source Identity**: The source identity specified by the principal that is calling the `AssumeRole` operation. You can use source identity
  information in AWS CloudTrail logs to determine who took actions with a role.
Find more information about [Source Identity](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html#:~:text=Required%3A%20No-,SourceIdentity,-The%20source%20identity).

#### Test Connection

Once the credentials have been added, click on **Test Connection** and **Save** the changes.

<img src="/public/images/connectors/test-connection.png" alt="Test Connection" />

### Step 5: Configure Ingestion Options

In the **What to Ingest** step, use filter patterns to control which assets OpenMetadata ingests from your messaging service. Filter patterns use regular expressions applied to topic names.

#### How Filter Patterns Work

- **Include**: Add one or more comma-separated regular expressions. OpenMetadata ingests only assets whose names match at least one expression. Leave blank to include all assets.
- **Exclude**: Add one or more comma-separated regular expressions. OpenMetadata skips any asset whose name matches an expression. Leave blank to exclude nothing.

Rules match asset names using one of five expressions:

- **contains**: matches any name containing the value. For example, `sales` matches `my_sales_data` and `sales_2024`.
- **starts with**: matches names beginning with the value. For example, `prod_` matches `prod_db` and `prod_schema`.
- **ends with**: matches names ending with the value. For example, `_raw` matches `events_raw` and `logs_raw`.
- **is exactly**: matches the exact name only. For example, `analytics` matches only `analytics`.
- **matches regex**: matches names using a regular expression. For example, `^prod_.*_v\d+$` matches `prod_events_v1`.

When both Include and Exclude are set, Exclude takes priority.

<Tip>
Leave the filter pattern empty to ingest all topics available in the source.
</Tip>

**Filter Options**

The Topic section includes the following filter options:

- **Topic**: Controls which topics (Kafka topics, Pulsar topics, or equivalent messaging channels) OpenMetadata ingests from the source.

Each section provides the following controls:

- **Scan Mode**: You can choose between the following scan modes:
    - **Scan all**: Ingests every asset of that type the connector can access. This is the default.
    - **Only specific**: Enables include rules so only assets matching at least one rule are ingested.
- **Exclude system toggle**: Use this toggle to automatically filter out system-reserved names defined by the connector, for example, **Exclude system databases** for the Databases section.
- **Always exclude**: Add permanent exclusion rules (shown in red). Assets matching these rules are never ingested, regardless of include rules.
- **Preview**: Shows a real-time summary of what will be in scope based on your current rules.
- **Include rules** *(available only in **Only specific** mode)*: Click **+ Add** to define a rule. Added rules appear as chips; an asset is included if it matches any rule.

### Step 6: Create & Deploy

Click **Create & Deploy** to deploy the agent and start the first metadata ingestion run. OpenMetadata saves the service configuration and immediately begins pulling metadata from the source.

To monitor ingestion progress or view the service you just added, go to **Settings** > **Services** and select your service.

## Configure Metadata Agent and Schedule Ingestion

<MetadataAgentMessaging />

<Related />
